tests/should_fail/syntax_tuple_index_oob.nv
module main

// SHOULD FAIL: tuple index out of bounds
// parser: "Tuple cannot index into 5"
let t = (1, 2, 3)
println(t[5])
